changed the pronouns, cbt to person centred therapy, deleted the certifications

--- a/about.html
+++ b/about.html
@@ -16,11 +16,11 @@
 
   <meta
     name="description"
-    content="Learn about Talk with Sian, a trusted provider of therapy services in Menai Bridge, Anglesey. Discover Sian's approach to compassionate and evidence-based therapy."
+    content="Learn about Talk with Sian, a trusted provider of therapy services in Menai Bridge, Anglesey. Discover my approach to compassionate and evidence-based therapy."
   />
   <meta
     name="keywords"
-    content="therapy Menai Bridge, counselling Anglesey, mental health services Anglesey, Sian Jones therapist, cognitive-behavioural therapy Menai Bridge, mindfulness therapy Anglesey"
+    content="therapy Menai Bridge, counselling Anglesey, mental health services Anglesey, Sian Jones therapist, person centred therapy Menai Bridge, mindfulness therapy Anglesey"
   />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
@@ -30,11 +30,11 @@
   <meta name="ICBM" content="53.2281, -4.1628" />
   <meta
     property="og:title"
-    content="About Us | Talk with Sian - Trusted Therapy in Menai Bridge & Anglesey"
+    content="About Me | Talk with Sian – Trusted Therapy in Menai Bridge & Anglesey"
   />
   <meta
     property="og:description"
-    content="Learn more about Talk with Sian and Sian Jones' approach to therapy. Serving clients in Menai Bridge and Anglesey with evidence-based and compassionate care."
+    content="Learn more about Talk with Sian and my approach to therapy. Serving clients in Menai Bridge and Anglesey with evidence-based and compassionate care."
   />
   <meta property="og:url" content="https://www.talkwithsian.com/about" />
   <meta property="og:type" content="website" />
@@ -42,11 +42,11 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta
     name="twitter:title"
-    content="About Us | Talk with Sian - Trusted Therapy in Menai Bridge & Anglesey"
+    content="About Me | Talk with Sian – Trusted Therapy in Menai Bridge & Anglesey"
   />
   <meta
     name="twitter:description"
-    content="Discover how Talk with Sian offers expert therapy services in Menai Bridge and Anglesey. Learn about our compassionate approach."
+    content="Discover how Talk with Sian offers expert therapy services in Menai Bridge and Anglesey. Learn about my compassionate, person-centred approach."
   />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
   <link rel="canonical" href="https://talkwithsian.com/about/" />
@@ -117,7 +117,8 @@
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
               <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
-              <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+              <!-- Changed from CBT to Person Centred Therapy -->
+              <li><a class="dropdown-item" href="person-centred-therapy.html">Person Centred Therapy</a></li>
             </ul>
           </li>
 
@@ -132,8 +133,8 @@
   <div id="cookieConsent" class="cookie-consent-banner">
     <div class="container d-flex align-items-center justify-content-between">
       <p class="mb-0">
-        We use cookies to improve your experience on our site. By continuing to use our site, you accept our use of cookies.
-        <a href="cookie-policy.html" >Learn more</a>.
+        I use cookies to improve your experience on my site. By continuing to use my site, you accept my use of cookies.
+        <a href="cookie-policy.html">Learn more</a>.
       </p>
       <button id="acceptCookies" class="btn btn-primary">Accept</button>
     </div>
@@ -145,30 +146,29 @@
     <div class="hero-section my-5">
       <h1>Talk with Sian</h1>
       <p class="text-white">
-        Our mission is to provide compassionate and personalised therapy to help
-        you achieve your best self. We combine evidence-based practices with a
+        My mission is to provide compassionate and personalised therapy to help
+        you achieve your best self. I combine evidence-based practices with a
         heart-centred approach to support your mental health journey.
       </p>
     </div>
 
-    <div class="about-section" id="our-story">
+    <div class="about-section" id="my-story">
       <h2 class="text-center">My Story</h2>
       <p>
-        At Talk with Sian, we believe in the power of therapy to transform lives.
-        Our practice was founded with the vision of creating a safe, supportive
-        space where individuals can explore their thoughts, emotions, and
-        behaviours without judgement. We are committed to providing high-quality
-        care that is tailored to the unique needs of each client.
+        At Talk with Sian, I believe in the power of therapy to transform lives.
+        I founded my practice with the vision of creating a safe, supportive
+        space where you can explore your thoughts, emotions, and behaviours
+        without judgement. I am committed to providing high-quality care that is
+        tailored to your unique needs.
       </p>
       <p>
-        Sian's approach to therapy is deeply rooted in empathy and understanding.
-        She believes in the importance of creating a collaborative environment
-        where clients feel heard and supported. Her journey into therapy began
-        with a desire to help others navigate their mental health challenges and
-        achieve a sense of balance and fulfilment in their lives.
+        My approach to therapy is deeply rooted in empathy and understanding.
+        I believe in creating a collaborative environment where you feel heard
+        and supported. My journey into therapy began with a desire to help others
+        navigate mental health challenges and find fulfilment in their lives.
       </p>
       <div class="text-center mt-4">
-        <a href="contact.html" class="cta-button">Contact Us Today</a>
+        <a href="contact.html" class="cta-button">Contact Me Today</a>
       </div>
     </div>
 
@@ -177,23 +177,21 @@
         <img src="images/sian.jpeg" alt="Sian Jones" class="img-fluid" />
         <h3>Sian Jones, Licensed Therapist</h3>
         <p>
-          With over 10 years of experience in the field of mental health, Sian
-          specialises in cognitive-behavioural therapy and mindfulness techniques.
-          She is dedicated to helping her clients achieve a balanced and
-          fulfilling life.
+          With over 10 years of experience in the field of mental health,
+          I specialise in person centred therapy and mindfulness techniques.
+          I am dedicated to helping my clients achieve a balanced and fulfilling life.
         </p>
         <a href="contact.html">Get in Touch</a>
       </div>
     </div>
 
     <div class="about-section" id="cpd">
-      <h2 class="text-center">Ongoing Professional Development</h2>
+      <h2 class="text-center">My Ongoing Professional Development</h2>
       <p>
-        My dedication to providing the best possible care for my clients is
-        reflected in my commitment to ongoing professional development. Below is
-        a selection of the specialized training and certifications that have
-        helped shape my approach to therapy, ensuring that I stay at the
-        forefront of the field.
+        My dedication to providing the best possible care is reflected in my commitment
+        to ongoing professional development. Below is a selection of specialised training
+        and certifications that have helped shape my approach, ensuring I stay
+        at the forefront of the field.
       </p>
 
       <div class="accordion" id="cpdAccordion">
@@ -354,38 +352,42 @@
       <p class="journey-intro text-center">A Lifelong Commitment to Growth and Service</p>
 
       <div class="journey-timeline">
+        <!-- Voluntary Work -->
         <div class="timeline-item">
           <div class="timeline-icon">
             <i class="fas fa-hands-helping"></i>
           </div>
           <div class="timeline-content">
             <h3 class="timeline-heading">Voluntary Work</h3>
-            <p class="timeline-description"><strong>Rape and Sexual Abuse Support Centre</strong> - Support Volunteer</p>
-            <p class="timeline-description"><strong>PCMH</strong> - Trainee Counsellor</p>
+            <p class="timeline-description">
+              <strong>Rape and Sexual Abuse Support Centre</strong> – Support Volunteer
+            </p>
+            <p class="timeline-description">
+              <strong>Primary Care Mental Health Counselling Services</strong> – Trainee Counsellor
+            </p>
           </div>
         </div>
 
+        <!-- Employment History (Keeping only relevant roles) -->
         <div class="timeline-item">
           <div class="timeline-icon">
             <i class="fas fa-briefcase"></i>
           </div>
           <div class="timeline-content">
             <h3 class="timeline-heading">Employment History</h3>
-            <p class="timeline-description"><strong>Rape and Sexual Abuse Support Centre</strong> - Counsellor</p>
-            <p class="timeline-description"><strong>Primary Care Mental Health Counselling Services</strong> - Trainee Counsellor</p>
-            <p class="timeline-description"><strong>Alzheimer’s Society</strong> - Dementia Advisor</p>
-            <p class="timeline-description"><strong>Parc Glas Doctor’s Surgery</strong> - Receptionist/Medicine Dispensing</p>
-            <p class="timeline-description"><strong>Santander Llangefni</strong> - Customer Service Advisor</p>
-            <p class="timeline-description"><strong>Dental Surgery Llangefni</strong> - Dental Surgery Assistant</p>
-            <p class="timeline-description"><strong>Doctor’s Surgery Gwalchmai</strong> - Receptionist/Medicine Dispensing</p>
-            <p class="timeline-description"><strong>Dental Surgery Bangor</strong> - Dental Surgery Assistant</p>
+            <p class="timeline-description">
+              <strong>Rape and Sexual Abuse Support Centre</strong> – Counsellor
+            </p>
+            <p class="timeline-description">
+              <strong>Primary Care Mental Health Counselling Services</strong> – Trainee Counsellor
+            </p>
           </div>
         </div>
       </div>
     </div>
 
     <div class="education-qualifications-section" id="education">
-      <h3 class="education-title text-center">Education & Qualifications</h3>
+      <h3 class="education-title text-center">Education &amp; Qualifications</h3>
       <div class="education-cards-container">
         <div class="education-card">
           <div class="education-card-icon">
@@ -396,7 +398,7 @@
               EFT Practitioner (Emotional Freedom Technique)
             </h4>
             <p class="education-card-description">
-              Accreditation by EFT & Mindfulness Centre, awarded on 01.04.2023
+              Accreditation by EFT &amp; Mindfulness Centre, awarded on 01.04.2023
             </p>
           </div>
         </div>
@@ -470,61 +472,23 @@
             </p>
           </div>
         </div>
-        <div class="education-card">
-          <div class="education-card-icon">
-            <i class="fas fa-certificate"></i>
-          </div>
-          <div class="education-card-content">
-            <h4 class="education-card-title">
-              NVQ Level 2 Dispensing Medicine/Pharmaceutical Assistant
-            </h4>
-            <p class="education-card-description">
-              Buttercups Training, awarded in April 2014
-            </p>
-          </div>
-        </div>
-        <div class="education-card">
-          <div class="education-card-icon">
-            <i class="fas fa-certificate"></i>
-          </div>
-          <div class="education-card-content">
-            <h4 class="education-card-title">
-              National Certificate in Dental Nursing
-            </h4>
-            <p class="education-card-description">
-              Coleg Llandrillo, Rhos on Sea, awarded in May 1994
-            </p>
-          </div>
-        </div>
-        <div class="education-card">
-          <div class="education-card-icon">
-            <i class="fas fa-certificate"></i>
-          </div>
-          <div class="education-card-content">
-            <h4 class="education-card-title">
-              Secretarial and Administrative Skills Level 3
-            </h4>
-            <p class="education-card-description">
-              Coleg Menai, Llangefni, awarded in June 1989
-            </p>
-          </div>
-        </div>
+        <!-- Removed NVQ Level 2, National Certificate in Dental Nursing, and Secretarial Skills as requested -->
       </div>
     </div>
 
-    <div class="about-section" id="why-choose-us">
-      <h2 class="text-center">Why Choose Us</h2>
+    <div class="about-section" id="why-choose-me">
+      <h2 class="text-center">Why Choose Me</h2>
       <p>
-        We understand that choosing a therapist is a deeply personal decision. At
-        Talk with Sian, we strive to provide a therapeutic environment that is
-        both welcoming and effective. Our practice is built on the principles of
+        I understand that choosing a therapist is a deeply personal decision. At
+        Talk with Sian, I strive to provide a therapeutic environment that is
+        both welcoming and effective. My practice is built on the principles of
         trust, confidentiality, and professional excellence.
       </p>
       <p>
-        Our commitment to evidence-based practices ensures that you receive the
-        highest quality care tailored to your individual needs. We take the time
+        I am committed to evidence-based practices, ensuring that you receive the
+        highest quality care tailored to your individual needs. I take the time
         to understand your unique challenges and work with you to develop a
-        personalised treatment plan that aligns with your goals.
+        personalised treatment plan aligned with your goals.
       </p>
       <div class="text-center mt-4">
         <a href="services.html" class="cta-button">Schedule Your First Session</a>
@@ -548,12 +512,12 @@
           <a href="cookie-policy.html"
             >Cookie Policy</a
           >
-          <a href="privacy-policy.html" 
+          <a href="privacy-policy.html"
             >Privacy Policy</a
           >
         </div>
         <div class="col-md-4 mb-4">
-          <h5>Connect with Us</h5>
+          <h5>Connect with Me</h5>
           <p>Mobile: +44 7754 141453</p>
           <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
         </div>
