--- a/person-centred-therapy.html
+++ b/person-centred-therapy.html
@@ -3,39 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CBT Therapy Near Me | Talk with Sian</title>
+  <title>Person Centred Therapy Near Me | Talk with Sian</title>
 
   <!-- Primary SEO Meta Tags -->
   <meta
     name="description"
-    content="Looking for CBT near you? Talk with Sian provides Cognitive Behavioural Therapy for anxiety, depression, and stress. Remote sessions across Chester & Cheshire."
+    content="Looking for Person Centred Therapy near you? Talk with Sian provides Person Centred therapy for anxiety, depression, and stress. Remote sessions across Chester & Flintshire."
   />
   <meta
     name="keywords"
-    content="CBT near me, cbt for depression, cognitive behavioural therapy, therapy near me, babcp accreditation, mental health support, chester cbt, therapy services Cheshire"
+    content="person centred therapy near me, therapy for depression, person centred therapy, therapy near me, babcp accreditation, mental health support, chester therapy, therapy services Flintshire"
   />
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Talk with Sian" />
   <meta name="geo.region" content="GB" />
-  <meta name="geo.placename" content="Chester, Cheshire, England" />
+  <meta name="geo.placename" content="Chester, Flintshire, Wales" />
   <meta name="geo.position" content="53.1905;-2.8919" />
   <meta name="ICBM" content="53.1905, -2.8919" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="CBT Therapy Near Me | Talk with Sian" />
-  <meta property="og:description" content="Transform negative thought patterns and behaviours with CBT. Talk with Sian offers remote Cognitive Behavioural Therapy in Chester & Cheshire." />
-  <meta property="og:url" content="https://www.talkwithsian.com/cbt-therapy" />
+  <meta property="og:title" content="Person Centred Therapy Near Me | Talk with Sian" />
+  <meta property="og:description" content="Transform the way you see yourself and your challenges with Person Centred Therapy. Talk with Sian offers remote sessions across Chester & Flintshire." />
+  <meta property="og:url" content="https://www.talkwithsian.com/person-centred-therapy" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="CBT Therapy Near Me | Talk with Sian" />
-  <meta name="twitter:description" content="Looking for CBT near you? Talk with Sian provides remote sessions for depression, anxiety, and stress across Chester & Cheshire." />
+  <meta name="twitter:title" content="Person Centred Therapy Near Me | Talk with Sian" />
+  <meta name="twitter:description" content="Looking for Person Centred Therapy near you? Talk with Sian provides remote sessions for depression, anxiety, and stress across Chester & Flintshire." />
   <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://talkwithsian.com/cbt-therapy.html" />
+  <link rel="canonical" href="https://talkwithsian.com/person-centred-therapy.html" />
 
   <!-- Favicon -->
   <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
@@ -133,7 +133,7 @@
 
     /* ========== Hero Section ========== */
     .hero-section {
-      background-image: url("images/CBT-hero.jpg");
+      background-image: url("images/person-centred-hero.jpg");
       background-size: cover;
       background-position: center;
       color: #fff;
@@ -279,7 +279,7 @@
               <li><hr class="dropdown-divider" /></li>
               <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
               <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
-              <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+              <li><a class="dropdown-item" href="person-centred-therapy.html">Person Centred Therapy</a></li>
             </ul>
           </li>
 
@@ -295,8 +295,8 @@
   <div id="cookieConsent" class="cookie-consent-banner">
     <div class="container d-flex align-items-center justify-content-between">
       <p class="mb-0">
-        We use cookies to improve your experience on our site. By continuing to
-        use our site, you accept our use of cookies.
+        I use cookies to improve your experience on my site. By continuing to
+        use my site, you accept my use of cookies.
         <a href="cookie-policy.html" >
           Learn more
         </a>.
@@ -309,85 +309,80 @@
   <div class="container content-container flex-grow-1">
     <!-- HERO SECTION -->
     <div class="hero-section">
-      <h1>CBT Therapy</h1>
+      <h1>Person Centred Therapy</h1>
       <p class="text-white">
-        Reshape negative thought patterns and build practical solutions for better mental health.
+        Experience a genuine therapeutic relationship built on empathy, understanding, and respect for you as an individual.
       </p>
     </div>
 
-    <!-- WHAT IS CBT -->
+    <!-- WHAT IS PERSON CENTRED THERAPY -->
     <div class="row align-items-center g-5 mb-5">
       <div class="col-md-6">
         <img
-          src="images/cbt-2.jpg"
-          alt="CBT Therapy in Chester & Cheshire"
+          src="images/person-centred-2.jpg"
+          alt="Person Centred Therapy in Chester & Flintshire"
           class="img-fluid rounded shadow"
         />
       </div>
       <div class="col-md-6">
-        <h2>What Is CBT?</h2>
+        <h2>What Is Person Centred Therapy?</h2>
         <p>
-          Cognitive Behavioural Therapy (CBT) is a structured, goal-oriented approach
-          focusing on the interplay between thoughts, feelings, and behaviours. 
-          By identifying and challenging unhelpful beliefs, CBT helps mitigate
-          symptoms of anxiety, depression, stress, and more—paving the way for tangible
-          positive change.
+          Person Centred Therapy is a humanistic approach focusing on your capacity for self-discovery and personal growth. 
+          By creating a safe, non-judgemental environment, this therapy empowers you to explore your thoughts, feelings, 
+          and experiences on your own terms—fostering genuine self-awareness and lasting change.
         </p>
         <p>
-          CBT is especially helpful for those seeking **practical techniques** and
-          clear strategies they can apply to daily life—making it a powerful tool
-          for sustainable well-being.
+          Person Centred Therapy is particularly effective if you seek a <strong>collaborative, empathetic</strong> space 
+          to address emotional struggles and develop a deeper understanding of yourself.
         </p>
       </div>
     </div>
 
-    <!-- WHY CHOOSE CBT (with background) -->
+    <!-- WHY CHOOSE PERSON CENTRED THERAPY (with background) -->
     <div class="row bg-light p-4 p-md-5 rounded-3 mb-5 g-4 align-items-center">
       <div class="col-lg-6">
-        <h2>Why Choose CBT?</h2>
+        <h2>Why Choose Person Centred Therapy?</h2>
         <p>
-          CBT offers an evidence-based, solution-focused framework. Rather than
-          dwelling solely on the past, sessions explore current triggers and
-          actionable coping strategies. This forward-thinking approach appeals
-          to many who want a clear plan for improvement.
+          Unlike directive approaches, Person Centred Therapy respects your autonomy and innate potential. 
+          Rather than defining a rigid plan, my role is to support you in identifying your goals and facilitating 
+          your own insights and breakthroughs.
         </p>
         <p>
-          <strong>Key advantages:</strong>  
-          &bull; Problem-solving mindset  
-          &bull; Collaborative style with your therapist  
-          &bull; Home-based practice to reinforce session insights
+          <strong>Key advantages:</strong><br/>
+          &bull; Deep sense of acceptance and understanding<br/>
+          &bull; Empowering focus on self-discovery<br/>
+          &bull; Flexible pace aligned with your needs
         </p>
       </div>
       <div class="col-lg-6 text-center">
         <img
-          src="images/why-cbt.jpg"
-          alt="Why CBT"
+          src="images/why-person-centred.jpg"
+          alt="Why Person Centred Therapy"
           class="img-fluid rounded shadow"
         />
       </div>
     </div>
 
-    <!-- HOW CBT WORKS -->
+    <!-- HOW PERSON CENTRED THERAPY WORKS -->
     <div class="row align-items-center mb-5 g-5">
       <div class="col-lg-6">
         <img
-          src="images/how-cbt-works.jpg"
-          alt="How CBT Works"
+          src="images/how-person-centred-works.jpg"
+          alt="How Person Centred Therapy Works"
           class="img-fluid rounded shadow"
         />
       </div>
       <div class="col-lg-6">
-        <h2>How CBT Sessions Work</h2>
+        <h2>How Sessions Work</h2>
         <p>
-          In each session, we’ll identify triggers, problematic thoughts, and resulting
-          behaviours that fuel distress. We may use strategies like thought
-          records, behavioural experiments, or relaxation techniques. You’ll then
-          apply these methods between sessions to observe changes in real life.
+          In Person Centred Therapy, I offer empathy, congruence, and unconditional positive regard 
+          while you share your experiences. This supportive atmosphere helps you tap into your 
+          own resources for insight and growth, whether you're dealing with anxiety, low mood, or 
+          simply striving to better understand yourself.
         </p>
         <p>
-          This hands-on, **weekly or bi-weekly** approach ensures you see tangible
-          progress, step by step—ultimately leading to greater emotional resilience
-          and coping skills.
+          You set the pace and the agenda. Together, we’ll explore whatever feels most pressing or meaningful 
+          to you, nurturing a richer sense of self-worth and resilience.
         </p>
       </div>
     </div>
@@ -397,19 +392,19 @@
       <div class="col-md-6">
         <h2>Convenience of Remote Sessions</h2>
         <p>
-          Our CBT sessions are offered remotely, so you can attend from the comfort
-          of your home. This is ideal if you have a busy schedule or prefer a private
-          environment. We use secure video platforms to protect your confidentiality,
-          ensuring you can focus solely on your well-being.
+          My Person Centred Therapy sessions are offered remotely, so you can attend from the comfort 
+          of your home. This is ideal if you have a busy schedule or prefer a private 
+          environment. I use secure video platforms to protect your confidentiality, 
+          ensuring you can focus on personal exploration and healing.
         </p>
         <p>
-          Remote therapy means no more geographical barriers—if you’re in Chester,
-          Cheshire, or beyond, CBT support is just a click away.
+          Remote therapy means no more geographical barriers—if you’re in Chester, Flintshire, or beyond, 
+          Person Centred Therapy support is just a click away.
         </p>
       </div>
       <div class="col-md-6">
         <img
-          src="images/cbt-remote.jpg"
+          src="images/person-centred-remote.jpg"
           alt="Remote Therapy"
           class="img-fluid rounded shadow"
         />
@@ -419,16 +414,16 @@
     <!-- CTA -->
     <div class="row bg-gradient p-4 p-md-5 rounded-3 text-white mb-5">
       <div class="col-md-10 offset-md-1 text-center">
-        <h2>Ready to Start Your CBT Journey?</h2>
+        <h2>Ready to Begin Your Person Centred Journey?</h2>
         <p class="mb-4">
-          Build practical solutions, reshape negative thoughts, and strengthen your mental health.
-          Let’s work together to create meaningful change.
+          Experience a therapeutic approach that honours your individuality, fosters insight, 
+          and supports meaningful change. Let’s work together to uncover your full potential.
         </p>
         <a href="services.html" class="btn-sian-outline me-3">
           All Services
         </a>
         <a href="contact.html" class="btn-sian">
-          Start CBT Now
+          Start Your Sessions
         </a>
       </div>
     </div>
@@ -455,7 +450,7 @@
           >
         </div>
         <div class="col-md-4 mb-4">
-          <h5>Connect with Us</h5>
+          <h5>Connect with Me</h5>
           <p>Mobile: +44 7754 141453</p>
           <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
         </div>
