--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Therapy Services in Chester &amp; Cheshire | Talk with Sian</title>
+    <title>Therapy Services in Chester &amp; Flintshire | Talk with Sian</title>
 
     <!-- Favicon -->
     <link rel="icon" href="images/logo-talk-with-sian.jpg" type="image/jpeg" />
@@ -11,27 +11,27 @@
     <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Explore our comprehensive range of therapy services, including EFT Tapping, Trauma Therapy, and CBT. Serving women in Chester, Cheshire, and beyond with bespoke counselling and support."
+      content="Explore my comprehensive range of therapy services, including EFT Tapping, Trauma Therapy, and Person Centred Therapy. I serve women in Chester & Flintshire, and beyond with bespoke counselling and support."
     />
     <meta
       name="keywords"
-      content="EFT Tapping, Emotional Freedom Technique, Trauma Therapy Chester, CBT near me, CBT for depression, therapy near me, therapy services Cheshire, counselling Cheshire, therapist near me"
+      content="EFT Tapping, Emotional Freedom Technique, Trauma Therapy Chester, Person Centred near me, Person Centred Therapy, therapy near me, therapy services Flintshire, counselling Flintshire, therapist near me"
     />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Talk with Sian" />
     <meta name="geo.region" content="GB" />
-    <meta name="geo.placename" content="Chester, Cheshire, England" />
+    <meta name="geo.placename" content="Chester, Flintshire, Wales" />
     <meta name="geo.position" content="53.1905;-2.8919" />
     <meta name="ICBM" content="53.1905, -2.8919" />
 
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Our Services | Talk with Sian – Professional Therapy in Chester &amp; Cheshire"
+      content="My Services | Talk with Sian – Professional Therapy in Chester &amp; Flintshire"
     />
     <meta
       property="og:description"
-      content="Offering EFT Tapping, Trauma Therapy, and CBT in Chester &amp; Cheshire. Discover our tailored therapy and counselling services for women seeking professional support."
+      content="Offering EFT Tapping, Trauma Therapy, and Person Centred Therapy in Chester &amp; Flintshire. Discover my tailored therapy and counselling services for women seeking professional support."
     />
     <meta property="og:url" content="https://www.talkwithsian.com/services" />
     <meta property="og:type" content="website" />
@@ -41,11 +41,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Our Services | Talk with Sian – Professional Therapy in Chester &amp; Cheshire"
+      content="My Services | Talk with Sian – Professional Therapy in Chester &amp; Flintshire"
     />
     <meta
       name="twitter:description"
-      content="Discover specialised therapy services for women, including EFT Tapping, Trauma Therapy, and CBT. Book your free consultation today."
+      content="Discover specialised therapy services for women, including EFT Tapping, Trauma Therapy, and Person Centred Therapy. Book your free consultation today."
     />
     <meta name="twitter:image" content="images/logo-talk-with-sian.jpg" />
     <link rel="canonical" href="https://talkwithsian.com/services/" />
@@ -294,16 +294,15 @@
       }
     </style>
   </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16513767694"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'AW-16513767694');
-</script>
+    gtag('config', 'AW-16513767694');
+  </script>
   <body class="d-flex flex-column min-vh-100">
     <!-- ======== NAVBAR ======== -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
@@ -348,11 +347,12 @@
                 Services
               </a>
               <ul class="dropdown-menu" aria-labelledby="servicesDropdown">
-                <li><a class="dropdown-item" href="services.html">All Services</a></li>
+                <li><a class="dropdown-item" href="services.html">All My Services</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><a class="dropdown-item" href="eft-therapy.html">EFT Tapping</a></li>
                 <li><a class="dropdown-item" href="trauma-therapy.html">Trauma Therapy</a></li>
-                <li><a class="dropdown-item" href="cbt-therapy.html">CBT Therapy</a></li>
+                <!-- Renamed CBT to Person Centred Therapy in the menu -->
+                <li><a class="dropdown-item" href="person-centred-therapy.html">Person Centred Therapy</a></li>
               </ul>
             </li>
 
@@ -368,8 +368,8 @@
     <div id="cookieConsent" class="cookie-consent-banner">
       <div class="container d-flex align-items-center justify-content-between">
         <p class="mb-0">
-          We use cookies to improve your experience on our site. By continuing to
-          use our site, you accept our use of cookies.
+          I use cookies to improve your experience on my site. By continuing to
+          use my site, you accept my use of cookies.
           <a href="cookie-policy.html">Learn more</a>.
         </p>
         <button id="acceptCookies" class="btn-sian-outline">Accept</button>
@@ -381,9 +381,9 @@
       
       <!-- Hero Section -->
       <div class="services-hero-section py-5 px-3 my-5" id="discovery-call">
-        <h1>Our Therapy Services</h1>
+        <h1>My Therapy Services</h1>
         <p class="lead">
-          Welcome to Talk with Sian. We provide a comprehensive range of bespoke therapy and counselling services designed to help you overcome life’s challenges in Chester, Cheshire, and beyond.
+          Welcome to Talk with Sian. I provide a comprehensive range of bespoke therapy and counselling services designed to help you overcome life’s challenges in Chester &amp; Flintshire, and beyond.
         </p>
         <a href="#schedule" class="btn-sian btn-sian-lg">Schedule Your Free Consultation</a>
       </div>
@@ -394,7 +394,7 @@
         <p><strong>Initial Consultation:</strong> Free</p>
         <p><strong>50-Minute Session:</strong> £50</p>
         <p>
-          All services are delivered online, ensuring professional support from the comfort and privacy of your own home.
+          All my services are delivered online, ensuring professional support from the comfort and privacy of your own home.
         </p>
       </div>
 
@@ -416,24 +416,24 @@
           <!-- Service Card 2: Trauma Therapy -->
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
             <div class="service-card">
-              <img src="images/trauma-therapy-cheshire.jpg" alt="Trauma Therapy Cheshire" />
+              <img src="images/trauma-therapy-cheshire.jpg" alt="Trauma Therapy for Women" />
               <h3>Trauma Therapy</h3>
               <p>
-                Our trauma-focused approach supports women through healing from past experiences, including domestic abuse and PTSD. Work towards recovery in a safe, understanding environment.
+                My trauma-focused approach supports women through healing from past experiences, including domestic abuse and PTSD. Work towards recovery in a safe, understanding environment.
               </p>
               <a class="btn-sian-outline mt-auto" href="trauma-therapy.html">Learn More</a>
             </div>
           </div>
 
-          <!-- Service Card 3: CBT Therapy -->
+          <!-- Service Card 3: Person Centred Therapy -->
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
             <div class="service-card">
-              <img src="images/CBT.jpg" alt="CBT Therapy near me" />
-              <h3>CBT Therapy</h3>
+              <img src="images/CBT.jpg" alt="Person Centred Therapy" />
+              <h3>Person Centred Therapy</h3>
               <p>
-                Benefit from Cognitive Behavioural Therapy to reframe negative thought patterns, address depression or anxiety, and support long-term mental well-being.
+                Reframe negative thought patterns, address depression or anxiety, and nurture long-term mental well-being. My person centred approach places you at the heart of your own healing.
               </p>
-              <a class="btn-sian-outline mt-auto" href="cbt-therapy.html">Learn More</a>
+              <a class="btn-sian-outline mt-auto" href="person-centred-therapy.html">Learn More</a>
             </div>
           </div>
 
@@ -443,18 +443,18 @@
               <img src="images/walk-and-talk.jpg" alt="Walk-and-Talk Therapy" />
               <h3>Walk-and-Talk Therapy</h3>
               <p>
-                Experience therapy amidst nature’s calming surroundings. Our walk-and-talk sessions offer a relaxed setting to discuss your concerns and promote emotional release.
+                Experience therapy amidst nature’s calming surroundings. My walk-and-talk sessions offer a relaxed setting to discuss your concerns and promote emotional release.
               </p>
             </div>
           </div>
 
-          <!-- Service Card 5: Person-Centred Counselling -->
+          <!-- Service Card 5: CBT Therapy (replacing second 'Person-Centred Counselling') -->
           <div class="col-md-6 col-lg-4 d-flex align-items-stretch">
             <div class="service-card">
-              <img src="images/personal.jpg" alt="Person-Centred Counselling" />
-              <h3>Person-Centred Counselling</h3>
+              <img src="images/personal.jpg" alt="CBT Therapy" />
+              <h3>CBT Therapy</h3>
               <p>
-                A humanistic approach that places you at the centre of your therapy. Collaborate in a judgement-free space to explore personal growth and self-discovery.
+                A structured, goal-oriented approach focusing on how your thoughts, emotions, and behaviours interact. I can help you develop practical coping strategies for challenges like anxiety, depression, and low self-esteem.
               </p>
             </div>
           </div>
@@ -470,7 +470,6 @@
             </div>
           </div>
 
-         
         </div> <!-- .row -->
       </div> <!-- .container -->
 
@@ -512,7 +511,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <h5>Legal</h5>
-            <a href="cookie-policy.html" 
+            <a href="cookie-policy.html"
               >Cookie Policy</a
             >
             <a href="privacy-policy.html"
@@ -520,7 +519,7 @@
             >
           </div>
           <div class="col-md-4 mb-4">
-            <h5>Connect with Us</h5>
+            <h5>Connect with Me</h5>
             <p>Mobile: +44 7754 141453</p>
             <p>Email: <a href="mailto:talkwithsian@gmail.com">talkwithsian@gmail.com</a></p>
           </div>
